--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -34,7 +34,7 @@
                 <%= link_to "수정하기", edit_user_registration_path %>
             </div>
             <div class="like">
-            <img src="/assets/heart.svg">
+             <%= image_tag("heart.svg")%>
             </div>
         </div>
     </div>
