--- a/app/views/education/index.html.erb
+++ b/app/views/education/index.html.erb
@@ -6,51 +6,57 @@
             <h1 style="color:white;font-size: 3.5vh;padding:3.5vh 2vh 3.5vh 2.5vh;width:100%;display:block;background-color:#2e284d">카테고리</h1>
             <div class="education-main-chart-item-box">
                 
-                <h1 class="chart-title" ><img src="/assets/sex1.svg" style="position:relative;top:0.2vh;width: 3.5vh;height:3.5vh;margin-right:0.8vh;">Sex</h1>
+                <h1 class="chart-title">
+                <%= image_tag("sex1.svg", {:style=> "position:relative;top:0.2vh;width: 3.5vh;height:3.5vh;margin-right:0.8vh;"}) %>
+                Sex</h1>
                
                 <div class="education-main-chart-item">
                     <div id="category-1" class="education-main-chart-item-each" onclick="move_contraception()">
-                        <img src="/assets/arrow4.svg">
+                        <%= image_tag("arrow4.svg")%>
                         <h1>피임</h1>
                     </div>
                     <div id="category-2" class="education-main-chart-item-each"  onclick="move_disease()" >
-                        <img src="/assets/arrow4.svg">
+                        <%= image_tag("arrow4.svg")%>
                         <h1>성병</h1>
                     </div>
                     <div id="category-" class="education-main-chart-item-each"  onclick="move_disease()">
-                        <img src="/assets/arrow4.svg">
+                        <%= image_tag("arrow4.svg")%>
                         <h1>성생활</h1>
                         <h2>콘텐츠 준비중</h2>
                     </div>
                 </div>
             </div>
             <div class="education-main-chart-item-box">
-                <h1 class="chart-title" ><img src="/assets/gender.svg" style="position:relative;top:0.2vh;width: 4vh;height:4vh;margin-right:1vh;">Gender</h1>
+                <h1 class="chart-title" >
+                <%= image_tag("gender.svg", {:style=> "position:relative;top:0.2vh;width: 4vh;height:4vh;margin-right:1vh;"}) %>
+                Gender</h1>
                 <div class="education-main-chart-item">
                     <div id="category-3" class="education-main-chart-item-each" onclick="move_genderequality()">
-                        <img src="/assets/arrow4.svg">
+                        <%= image_tag("arrow4.svg")%>
                         <h1>젠더 다양성</h1>
                     </div>
                     <div id="category-4" class="education-main-chart-item-each" onclick="move_media()">
-                        <img src="/assets/arrow4.svg">
+                        <%= image_tag("arrow4.svg")%>
                         <h1>미디어</h1>
                     </div>
                      <div id="category-" class="education-main-chart-item-each" onclick="move_media()">
-                        <img src="/assets/arrow4.svg">
+                        <%= image_tag("arrow4.svg")%>
                         <h1>데이트</h1>
                         <h2>콘텐츠 준비중</h2>
                     </div>
                 </div>
             </div>
             <div class="education-main-chart-item-box">
-                <h1 class="chart-title" ><img src="/assets/etc.svg" style="position:relative;top:0.2vh;width: 3vh;height:3vh;margin-right: 1.6vh;margin-left:0.5vh">Etc</h1>
+                <h1 class="chart-title" >
+                <%= image_tag("etc.svg", {:style=> "position:relative;top:0.2vh;width: 3vh;height:3vh;margin-right: 1.6vh;margin-left:0.5vh;"}) %>
+                    Etc</h1>
                 <div class="education-main-chart-item">
                     <div id="category-5" class="education-main-chart-item-each" onclick="move_reference()">
-                        <img src="/assets/arrow4.svg">
+                        <%= image_tag("arrow4.svg")%>
                         <h1>구경거리</h1>
                     </div>
                     <div id="category-6" class="education-main-chart-item-each"  onclick="move_qna()">
-                        <img src="/assets/arrow4.svg">
+                        <%= image_tag("arrow4.svg")%>
                         <h1>Q&A</h1>
                     </div>
                  
@@ -62,14 +68,13 @@
     <div class="education-main-box-content">
         <div id="pin-1" class="airpin">
             <div id="disease" class="education-main-box">
-                
-                <img src="/assets/고민3.png">
+                <%= image_tag("고민3.png")%>
                 <a href="/education/contraception"><button>피임법 알아보기!</button></a>
             </div>
         </div>
        <div id="pin-2" class="airpin">
             <div id="contraception" class="education-main-box">
-                <img src="/assets/고민.png">
+                <%= image_tag("고민.png")%>
                 <a href="/education/venereal">
                 <button>성병 진단하기!</button>
                 </a>
@@ -77,25 +82,25 @@
        </div>
         <div id="pin-3" class="airpin">
             <div id="genderequality"  class="education-main-box">
-                <img src="/assets/젠더.png">
+                <%= image_tag("젠더.png")%>
                 <a href="/education/genderequality"> <button>싸운 이유 보기!</button></a>
             </div>
         </div>
          <div id="pin-4" class="airpin">
             <div id="media"  class="education-main-box">
-                <img src="/assets/미디어1.png">
+                <%= image_tag("미디어.png" {:style=> height:20vh;}) %>
                  <a href="/education/genderequality"> <button>미디어 파헤치기!</button></a>
             </div>
         </div>
         <div id="pin-5" class="airpin">
             <div id="reference"  class="education-main-box">
-                <img src="/assets/미디어.png">
+                <%= image_tag("미디어.png")%>
                 <button><%=link_to "구경거리 보러가기!", education_reference2_path, remote:true %></button>
             </div>
         </div>
         <div id="pin-6" class="airpin">
             <div id="qna"  class="education-main-box">
-               <img src="/assets/질문.png">
+               <%= image_tag("질문.png")%>
             <a href="https://open.kakao.com/o/s2nOBrW"><button>질문하러 가기!</button></a> 
             </div>
         </div>
