--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,12 +1,12 @@
 <div class="top-button" onclick="movetop()">
-    <img src="assets/up.svg" alt="" style="width: 6vh;height:6vh;z-index:1000;">
+    <%= image_tag("up.svg", {:style=> "width: 6vh;height:6vh;z-index:1000;"}) %>
     <h1 style=" font-weight:400; top:-2vh; position:relative;">Top</h1>
 </div>
   
 <div class="main-1">
     <div class="main-1-container">
         <div class="main-1-title">
-            <img src='/assets/메인보드글자.svg'>
+            <%= image_tag("메인보드글자.svg")%>
             <%# <h1>성교</h1><h1 style="color: rgb(255, 255, 214)">할래</h1> %>
              <%# <img src="/assets/성교한자.svg"> %>
         </div>
@@ -16,15 +16,24 @@
             여러분과 같은 사람을 만나고<br>
             서로 알아갈 수 있는 기회입니다!
         </h2>
-        <img src="/assets/공감start.png" alt="" style="width: 35vh;position:Absolute;top:52vh;height: 26vh;margin-top:2vh;cursor:pointer" onclick="movequiz()">
-        <img src="/assets/arrow.svg" alt="" style="width:6vh;height: 6vh;fill:white;position:absolute;top:77vh">
-        <img src="/assets/arrow.svg" alt="" style="width: 6vh;height: 6vh;fill:white;position:absolute;top: 80vh">
+        <div onclick="movequiz()">
+            <%= image_tag("공감start.png", {:style=> "width: 35vh;position:Absolute;top:52vh;height: 26vh;margin-top:2vh;cursor:pointer;"}) %>
+        </div>
+        <div onclick="movequiz()">
+            <%= image_tag("arrow.svg", {:style=> "width: 6vh;height: 6vh;fill:white;position:absolute;top:77vh;"}) %>
+        </div>
+        <%= image_tag("arrow.svg", {:style=> "width: 6vh;height: 6vh;fill:white;position:absolute;top: 80vh;"}) %>
     </div>
 </div>
 
 <div class="main-2">
     <div class="pursuit">
-            <div style="display:flex;"><h1 style="font-size: 4vh;">성교육</h1><img src="/assets/think.svg" alt="" style="margin-left:0.5vh;width:4.5vh;height:4.5vh;"></div><h1 style="font-size: 3vh;font-weight:300;font-weight: 500;margin-top: 0.3vh;">생각하면</h1><div style="display:flex;margin-top: 0.4vh"><h1 style="font-size: 3.5vh;color: red;">떠</h1><h1 style="font-size: 3.5vh;color: red;">오르는 것?</h1>
+            <div style="display:flex;"><h1 style="font-size: 4vh;">성교육</h1>
+            <%= image_tag("think.svg", {:style=> "margin-left:0.5vh;width:4.5vh;height:4.5vh;"}) %>
+        </div>
+        <h1 style="font-size: 3vh;font-weight:300;font-weight: 500;margin-top: 0.3vh;">생각하면</h1>
+        <div style="display:flex;margin-top: 0.4vh"
+        ><h1 style="font-size: 3.5vh;color: red;">떠</h1><h1 style="font-size: 3.5vh;color: red;">오르는 것?</h1>
             </div>
             <div>
                 <div style="width: 90%;height:2.5px;background-color: rgba(170, 170, 170, 0.507);margin-top: 50%;display:flex;">
@@ -38,21 +47,21 @@
     <div class="main-2-container">
         <div class="main-2-container-circle">
             <div class="circle">
-                <img src="/assets/재미없어.gif">
+                <%= image_tag("재미없어.gif")%>
             </div>
             <h1>밀려오는 지루함;;</h1>
             <h2>언제 끝나는 걸까?</h2>
         </div>
         <div class="main-2-container-circle">
             <div class="circle">
-                <img src="/assets/fuck.png" style="width: 110%;">
+                <%= image_tag("fuck.png", {:style=> "width: 110%;"}) %>
             </div>
             <h1>말도 안되는 내용?!</h1>
             <h2>저걸 가르쳐서 무슨 소용?</h2>
         </div>
         <div class="main-2-container-circle">
             <div class="circle">
-                <img src="/assets/부끄러워.jpg">
+                <%= image_tag("재미없어.gif")%>
             </div>
             <h1>이미 다 아는걸...</h1>
             <h2>내가 정말 궁금한건 달라!</h2>
@@ -109,7 +118,7 @@
 
 
 <div class="main-4-0">
-<img src="/assets/빈칸채우기.svg" style="width: 60vh;height: 37vh;">
+<%= image_tag("빈칸채우기.svg", {:style=> "width: 60vh;height: 37vh;"}) %>
 </div>
 
 <div class="main-4-1">
@@ -121,7 +130,7 @@
     <div style="width: 4vh;border-bottom:2px solid rgb(103, 28, 107);"></div>
 </div>
 <div class="main-5">
-    <img src="/assets/left.svg" alt="" style="width:5vh; height:4vh; transform:rotate(180deg); margin-left:1.5vh;">
+    <%= image_tag("left.svg", {:style=> "width:5vh; height:4vh; transform:rotate(180deg); margin-left:1.5vh;"})%>
     <div class="main-5-container">  
         <div style="margin-bottom:2vh;">
             <h2 style="color:white;font-size:3vh">가장 핫한 성교글!</h2>
@@ -139,11 +148,13 @@
                             <h1>Jang Young Jae</h1>
                             <div style="display:flex; flex-direction:row; align-items:center;">
                                 <h1>10시간 전</h1>
-                                <img src="/assets/earth.svg" alt="" style="width:2vh; height:2vh; margin-left:0.3vh; position:relative; top:0.3vh;">
+                                <%= image_tag("earth.svg", {:style=> "width:2vh; height:2vh; margin-left:0.3vh; position:relative; top:0.3vh;"})%>
                             </div>   
                         </div>
                     </div>
-                    <img src="/assets/3dot.svg" alt="" class="dot">
+                     <%= image_tag("3dot.svg", {:class=> "dot"})%>
+                    <%= image_tag("3dot.svg", {:class=> "dot"}) %>
+
                 </div>
                 
                  <h1 class="post-content">Excellent!Excllent!Excellent!ExcellenExcellent!ExcellenExcellent!Excellent!Excellenllent!Excellent!ExcellenExcellent!ExcellenExcellent!Excellent!Excellenllent!Excellent!ExcellenExcellent!ExcellenExcellent!Excellent!Excellenllent!Excellent!ExcellenExcellent!ExcellenExcellent!Excellent!Excellenllent!Excellent!ExcellenExcellent!ExcellenExcellent!Excellent!Excellenllent!Excellent!ExcellenExcellent!ExcellenExcellent!Excellent!Excellenllent!Excellent!ExcellenExcellent!ExcellenExcellent!Excellent!Excellenllent!Excellent!ExcellenExcellent!ExcellenExcellent!Excellent!Excellenllent!Excellent!ExcellenExcellent!ExcellenExcellent!Excellent!Excellenllent!Excellent!ExcellenExcellent!ExcellenExcellent!Excellent!Excellenllent!Excellent!ExcellenExcellent!ExcellenExcellent!Excellent!Excellenellent!ExcellenExcellent!ExcellenExcellent!Excellent!Excellent!</h1>
@@ -189,7 +200,8 @@
             </div>
             </div>
         </div>    
-    <img src="/assets/left.svg" alt="" style="width:5vh; height:5vh; margin-right:1.5vh">
+     <%= image_tag("left.svg", {:style=> "idth:5vh; height:5vh; margin-right:1.5vh;"})%>
+
 </div>
 
 
