--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,40 +40,41 @@
   <body>
     <div class="nav">
       <div class="logo">
-        <a href="/"><img src="/assets/성교한글1.svg" style="height: 15vh;width: auto;top:0.3vh;position:relative;"></a>
+        <a href="/">
+         <%= image_tag("성교한글1.svg", {:style=> "height: 15vh;width: auto;top:0.3vh;position:relative;"}) %>
         <a href="/" class="small">性스러운 가르침</a>
      
       </div>
       <div class="nav-menu-box">
           <a class="nav-menu" href="/" style="top:-0.2vh;height: 6.5vh;">
-            <img src="/assets/main.svg" >
+             <%= image_tag("main.svg")%>
             <h1 style="top:-0.7vh">Main</h1>
           </a>
           <a class="nav-menu" href="/education/index">
-            <img src="/assets/book.svg">
+             <%= image_tag("book.svg")%>
             <h1>Education</h1>
           </a>
           <a class="nav-menu" href="/posts" >
-            <img src="/assets/community1.svg" style="top:0vh;height: 6.5vh;">
+            <%= image_tag("community1.svg", {:style=> "top:0vh;height: 6.5vh;"}) %>
             <h1 style="top:-2.3vh">Community</h1>
           </a>
            <a class="nav-menu" href="/counsel/index" >
-            <img src="/assets/customer.svg" style="top:-0.4vh;height:5.2vh">
+             <%= image_tag("customer.svg", {:style=> "top:-0.4vh;height:5.2vh;"}) %>
             <h1 style="top:-1.4vh">Counsel</h1>
           </a>
           <% if user_signed_in? %>
           
             <a class="nav-menu" href="/user/index" >
-              <img src="/assets/account.svg" style="top:0vh;height:4vh">
+               <%= image_tag("account.svg", {:style=> "top:0vh;height:4vh;"}) %>
               <h1 style="top:-0.8vh">Account</h1>     
             </a>
             <%= link_to destroy_user_session_path, method: :delete, :class => "nav-menu" do%>
-              <img src="/assets/logout.svg" style="top:0vh;height:4vh">
+              <%= image_tag("logout.svg", {:style=> "top:0vh;height:4vh;"}) %>
               <h1 style="top:-0.8vh">Logout</h1>   
             <%end%>
           <% else %>
            <a class="nav-menu" href="/users/sign_in" >
-            <img src="/assets/account.svg" style="top:0vh;height:4vh">
+            <%= image_tag("account.svg", {:style=> "top:0vh;height:4vh;"}) %>
             <h1 style="top:-0.8vh">Login</h1>     
           </a>
           <% end %>
